--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.3.0",
     "mongoose-paginate-v2": "^1.8.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.4"
   },
